--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
         "base-64": "^1.0.0",
         "clsx": "^2.1.1",
         "crypto": "^1.0.1",
-        "expo": "~52.0.23",
-        "expo-application": "^6.0.2",
+        "expo": "^53.0.8",
+        "expo-application": "^6.1.4",
         "expo-auth-session": "~6.0.2",
         "expo-blur": "~14.0.1",
         "expo-constants": "~17.0.3",
@@ -57,7 +57,7 @@
         "expo-status-bar": "~2.0.0",
         "expo-symbols": "~0.2.0",
         "expo-system-ui": "~4.0.6",
-        "expo-web-browser": "~14.0.2",
+        "expo-web-browser": "~14.1.6",
         "jwt-decode": "^4.0.0",
         "lodash": "^4.17.21",
         "metro-react-native-babel-preset": "^0.77.0",
