--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "expo-constants": "~17.0.3",
         "expo-crypto": "~14.0.2",
         "expo-dev-client": "~5.0.9",
+        "expo-file-system": "18.0.0",
         "expo-font": "~13.0.2",
         "expo-haptics": "~14.0.0",
         "expo-image": "~2.0.6",
@@ -58,6 +59,7 @@
         "expo-symbols": "~0.2.0",
         "expo-system-ui": "~4.0.6",
         "expo-web-browser": "~14.1.6",
+        "immer": "^10.1.1",
         "jwt-decode": "^4.0.0",
         "lodash": "^4.17.21",
         "metro-react-native-babel-preset": "^0.77.0",
