--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@react-navigation/bottom-tabs": "^7.2.0",
         "@react-navigation/material-top-tabs": "^7.1.0",
         "@react-navigation/native": "^7.0.14",
+        "@shopify/flash-list": "^1.8.2",
         "animejs": "^3.2.2",
         "axios": "^1.7.9",
         "base-64": "^1.0.0",
