ABB file created

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -56,5 +56,12 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 expo.useLegacyPackaging=false
 
 expo.jsEngine=jsc
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=wagmee@123
+MYAPP_UPLOAD_KEY_PASSWORD=wagmee@123
+
+org.gradle.configureondemand=false
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=false
