--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "react-native-paper": "^5.13.1",
         "react-native-reanimated": "~3.16.1",
         "react-native-reanimated-carousel": "^4.0.2",
+        "react-native-restart": "^0.0.27",
         "react-native-safe-area-context": "4.12.0",
         "react-native-screens": "~4.4.0",
         "react-native-shimmer-placeholder": "^2.0.9",
